Fixed overflow issues on overviewpages using a scrollbar, Post overflow with text issue, fixed landing page profile image, fixed bugs with admin actions on useroverview page

--- a/client/src/components/Post/PostStyles.module.css
+++ b/client/src/components/Post/PostStyles.module.css
@@ -91,3 +91,23 @@
 #tag_container{
     margin: 0 3% 1% 3%;
 }
+
+/* Set boundries for the username depending on the screen size */
+
+@media (min-width: 0px) {
+    #username-display{
+        max-width: 100px;
+    }
+}
+
+@media (min-width: 640px) {
+    #username-display{
+        max-width: 300px;
+    }
+}
+
+@media (min-width: 768px) {
+    #username-display{
+        max-width: 300px;
+    }
+}
